--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "^17.0.1",
     "react-animations": "^1.0.0",
     "react-dom": "^17.0.1",
+    "react-floaterjs": "^1.0.6",
     "react-lazy-load-image-component": "^1.5.1",
     "react-scripts": "4.0.2",
+    "react-spring": "^8.0.27",
     "react-typical": "^0.1.3",
     "web-vitals": "^1.1.0"
   },
